--- a/src/app/components/nav/nav-bar.html
+++ b/src/app/components/nav/nav-bar.html
@@ -1,6 +1,12 @@
-<div>
-    <ul>
-        <li>Home</li>
-        <li>Contact</li>
-    </ul>
+<div id="pagina">
+    <div class="barra-menu">
+        <!-- Boton Desplegar/Replegar menú -->	<a href="#" id="btn-drop" class="btn-menu aln-centro">Navegacion</a>	
+        <!-- Menú de navegación -->
+        <ul id="submenu" class="lista-menu aln-centro">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
+    </div>
 </div>
