Added components for routing

--- a/src/app/components/nav/nav-bar.html
+++ b/src/app/components/nav/nav-bar.html
@@ -3,10 +3,22 @@
         <!-- Boton Desplegar/Replegar menú -->	<a href="#" id="btn-drop" class="btn-menu aln-centro">Navegacion</a>	
         <!-- Menú de navegación -->
         <ul id="submenu" class="lista-menu aln-centro">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a 
+                routerLinkActive='active'
+                routerLink='home'
+            >Home</a></li>
+            <li><a 
+                routerLinkActive='active'
+                routerLink='products'
+            >Products</a></li>
+            <li><a 
+                routerLinkActive='active'
+                routerLink='about'
+            >About</a></li>
+            <li><a 
+                routerLinkActive='active'
+                routerLink='contacts'
+            >Contacts</a></li>
         </ul>
     </div>
 </div>
