Added binding to routerLink and routerLinkActive

--- a/src/app/components/nav/nav-bar.html
+++ b/src/app/components/nav/nav-bar.html
@@ -4,21 +4,21 @@
         <!-- Menú de navegación -->
         <ul id="submenu" class="lista-menu aln-centro">
             <li><a 
-                routerLinkActive='active'
-                routerLink='home'
-            >Home</a></li>
+                [routerLinkActive]="['active']"
+                [routerLink]="['home']">Home</a>
+            </li>
             <li><a 
-                routerLinkActive='active'
-                routerLink='products'
-            >Products</a></li>
+                [routerLinkActive]="['active']"
+                [routerLink]="['products']">Products</a>
+            </li>
             <li><a 
-                routerLinkActive='active'
-                routerLink='about'
-            >About</a></li>
+                [routerLinkActive]="['active']"
+                [routerLink]="['about']">About</a>
+            </li>
             <li><a 
-                routerLinkActive='active'
-                routerLink='contacts'
-            >Contacts</a></li>
+                [routerLinkActive]="['active']"
+                [routerLink]="['contacts']">Contacts</a>
+            </li>
         </ul>
     </div>
 </div>
