--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -1,11 +1,11 @@
-$translate-amount: 100px;
-$rotate-amount: 30deg;
+$translate-amount: 10px;
+$rotate-amount: 10deg;
 
 .foo {
     display: flex;
-    transform: translate($translate-amount) rotate($rotate-amount);
+    transform: rotate($rotate-amount);
     transform-origin: 0 0;
     color: #fff;
-    background: #c00;
-    padding-left: 50%;
+    background: #00c;
+    justify-content: center;
 }
