--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -1,11 +1,11 @@
-$translate-amount: 100px;
-$rotate-amount: 30deg;
+$translate-amount: 10px;
+$rotate-amount: 0deg;
 
 .foo {
   display: flex;
-  transform: translate($translate-amount) rotate($rotate-amount);
+  transform: rotate($rotate-amount);
   transform-origin: 0 0;
   color: #fff;
   background: #c00;
-  padding-left: 1%;
+  justify-content: center;
 }
